--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="C:\Users\mahesh\Desktop\nimeshs\images\cloud.png" alt="cloud">
-    <img class="middle-cloud" src="C:\Users\mahesh\Desktop\nimeshs\images\cloud.png" alt="cloud" >
-    <img class="bottom-cloud" src="C:\Users\mahesh\Desktop\nimeshs\images\cloud.png" alt="cloud" >
+    <img class="top-cloud" src="images\cloud.png" alt="cloud">
+    <img class="middle-cloud" src="images\cloud.png" alt="cloud" >
+    <img class="bottom-cloud" src="images\cloud.png" alt="cloud" >
 
     <div class="title-text">
       <h1>I'm NIMESH RAI.</h1>
       <h2>a <span class="pro">pro</span>grammer.</h2>
     </div>
-    <img class="tree" src="C:\Users\mahesh\Desktop\nimeshs\images\tree.jpg" alt="tree" >
-    <img class="tree" src="C:\Users\mahesh\Desktop\nimeshs\images\tree.jpg" alt="tree" >
-    <img class="tree" src="C:\Users\mahesh\Desktop\nimeshs\images\tree.jpg" alt="tree" >
+    <img class="tree" src="images\tree.jpg" alt="tree" >
+    <img class="tree" src="images\tree.jpg" alt="tree" >
+    <img class="tree" src="images\tree.jpg" alt="tree" >
 
   </div>
 
   <div class="middle-container">
     <div class="profile">
-      <img src="C:\Users\mahesh\Desktop\nimeshs\images\nimesh.jpg" alt="profile-img">
+      <img src="images\nimesh.jpg" alt="profile-img">
       <h2>Hello.</h2>
       <p class="intro">I am an iOS and Web Developer.I ❤️ to play sports..</p>
     </div>
@@ -35,14 +35,14 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="code-img" src="C:\Users\mahesh\Desktop\nimeshs\images\code.gif" alt="code-img">
+        <img class="code-img" src="images\code.gif" alt="code-img">
 
         <h3>Design & Development</h3>
         <p>I started learning to code when I was 12 years old because I wanted to make my own video games. Over time, I have gained a wealth of experience designing and developing mobile and web applications.</p>
 
       </div>
       <div class="skill-row">
-        <img class="soccer-img" src="C:\Users\mahesh\Desktop\nimeshs\images\socceer.gif" alt="soccer-img">
+        <img class="soccer-img" src="images\socceer.gif" alt="soccer-img">
 
         <h3>Playing Soccer</h3>
         <p>But my best skill is actually playing soccer. I have ab undisputed team of soccer .I have  played many soccer tournaments and my favourite  palyer is Leo Messi .</p>
@@ -60,9 +60,9 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/in/"><img class="logo" src="C:\Users\mahesh\Desktop\nimeshs\images\linkdin.jpg" alt="logo"></a>
-    <a class="footer-link" href="https://twitter.com/"><img class="logo" src="C:\Users\mahesh\Desktop\nimeshs\images\twitter.png" alt="logo"></a>
-    <a class="footer-link" href="https://www.facebook.com/"><img class="logo" src="C:\Users\mahesh\Desktop\nimeshs\images\fb logo.png" alt="logo"></a>
+    <a class="footer-link" href="https://www.linkedin.com/in/"><img class="images\linkdin.jpg" alt="logo"></a>
+    <a class="footer-link" href="https://twitter.com/"><img class="logo" src="images\twitter.png" alt="logo"></a>
+    <a class="footer-link" href="https://www.facebook.com/"><img class="logo" src="images\fb logo.png" alt="logo"></a>
     <p class="copyright">©Nimesh Rai 2021 .</p>
   </div>
 </body>
