--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/in/"><img class="images\linkdin.jpg" alt="logo"></a>
+    <a class="footer-link" href="https://www.linkedin.com/in/"><img class="logo" src="images\linkdin.jpg" alt="logo"></a>
     <a class="footer-link" href="https://twitter.com/"><img class="logo" src="images\twitter.png" alt="logo"></a>
     <a class="footer-link" href="https://www.facebook.com/"><img class="logo" src="images\fb logo.png" alt="logo"></a>
     <p class="copyright">©Nimesh Rai 2021 .</p>
